cabal-version:       2.4
name:                ExtendedSystemF
version:             0.1.0.0
synopsis:            Bidirectional
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Sindri Pétur, Frederik
maintainer:          sindripetur@gmail.com
-- A copyright notice.
-- copyright:
category:            Language
-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

library
  -- ghc-options: -Wall -Werror
  ghc-options: -Wall
  exposed-modules:     TypeChecker
                     , Types
                     , Subtype
                     , Examples
  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
                     , containers
                     , mtl

  hs-source-dirs:      lib
  default-language:    Haskell2010


executable ExtendedSystemF
  main-is:             Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, ExtendedSystemF

  hs-source-dirs:      app
  default-language:    Haskell2010


test-suite ExtendedSystemF-test
  default-language:    Haskell2010
  type:                detailed-0.9
  hs-source-dirs:      test
  test-module:         TestRunner
  build-depends:       base ^>=4.13.0.0
                     , ExtendedSystemF
                     , QuickCheck
                     , Cabal
                     , cabal-test-quickcheck

